# IP-MCP

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  OPERATIONS.md  PLAN.md  README.en.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: summarize_logs.py  token_check.py
src/ip_mcp/: access_log.py  server.py
src/ip_mcp/auth/: __init__.py  pages.py  provider.py
src/ip_mcp/jpo/: client.py  normalize.py  rate_limiter.py  status_codes.py
src/ip_mcp/tools_external/: __init__.py  google_patents_search.py
src/ip_mcp/tools_official/: _shared.py  applicant.py  citations.py  convert.py  documents.py  fetch_full_record.py  jpp_url.py  opd.py  progress.py  registration.py  relations.py
tests/: test_access_log.py  test_external_isolation.py  test_jpo_raw_response.py  test_normalize.py  test_oauth_provider.py  test_status_codes.py
